--- a/main.html
+++ b/main.html
@@ -8,6 +8,44 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+    <table border="1">
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Mahak</td>
+			</tr>
+			<tr>
+                <td>2</td>
+				<td>Preet</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Kaur</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<ol>
+  <li><img src="https://picsum.photos/id/123/200/300" alt="Random image"></li>
+  <li>
+    <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </li>
+  <li>
+    <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      Your browser does not support the audio element.
+    </audio>
+  </li>
+</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
