--- a/main.html
+++ b/main.html
@@ -30,22 +30,25 @@
 			</tr>
 		</tbody>
 	</table>
-
-	<ol>
-  <li><img src="https://picsum.photos/id/123/200/300" alt="Random image"></li>
-  <li>
-    <video controls>
-      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </li>
-  <li>
-    <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-      Your browser does not support the audio element.
-    </audio>
-  </li>
+    <h2>List of medias</h2>
+<ol>
+    <li>
+        <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+    </li>
+    <li>
+        <video controls>
+            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </li>
+    <li>
+        <audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            Your browser does not support the audio tag.
+        </audio>
+    </li>
 </ol>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
