--- a/main.html
+++ b/main.html
@@ -36,8 +36,7 @@
         <img src="https://picsum.photos/id/123/200/300" alt="Random image">
     </li>
     <li>
-        <video controls>
-            <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </li>
