--- a/main.html
+++ b/main.html
@@ -8,45 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <table border="1">
+    <table>
 		<thead>
-			<tr>
-				<th>Roll numbers</th>
-				<th>Names</th>
-			</tr>
+			<th>Roll number</th>
+			<th>Student name</th>
 		</thead>
 		<tbody>
 			<tr>
 				<td>1</td>
-				<td>Mahak</td>
+				<td>Akshat</td>
 			</tr>
 			<tr>
-                <td>2</td>
-				<td>Preet</td>
+				<td>2</td>
+				<td>Dipankar</td>
 			</tr>
 			<tr>
 				<td>3</td>
-				<td>Kaur</td>
+				<td>Vineet</td>
 			</tr>
 		</tbody>
 	</table>
-    <h2>List of medias</h2>
-<ol>
-    <li>
-        <img src="https://picsum.photos/id/123/200/300" alt="Random image">
-    </li>
-    <li>
-        <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    </li>
-    <li>
-        <audio controls>
-            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-            Your browser does not support the audio tag.
-        </audio>
-    </li>
-</ol>
+	<h2>List of medias</h2>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="dasd">
+		</li>
+ 
+ 
+		<li>
+			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" />
+			</video>
+ 
+		</li>
+		<li>
+ 
+ 
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
+				controls></audio>
+		</li>
+	</ol>
 
     <script type="text/javascript" src="./script.js">
 </script>
